--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -7,11 +7,6 @@
     tools:context=".SettingsFragment"
     android:background="@color/gris">
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:background="@color/AzulOscuro3" />
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -22,7 +17,7 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="30dp">
+            android:layout_marginTop="0dp">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -65,6 +60,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
+                        android:textSize="12sp"
                         android:text="Cambiar Nombre" />
 
                 </LinearLayout>
@@ -111,6 +107,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
+                        android:textSize="12sp"
                         android:text="Cambiar Password" />
 
                 </LinearLayout>
@@ -123,12 +120,37 @@
                 android:orientation="vertical"
                 android:layout_marginTop="350dp">
 
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <TextView
+                        android:id="@+id/text_cambiar_estacion_ajustes"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Cambiar estacion actual:"
+                        android:textSize="20sp"
+                        android:textStyle="bold" />
+
+                </RelativeLayout>
+
                 <Button
-                    android:id="@+id/buttonBorraCuenta"
+                    android:layout_marginTop="20dp"
+                    android:id="@+id/cambiar_estacion_boton_ajustes"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:text="Cambiar estacion"/>
+
+
+                <Button
+                    android:layout_marginTop="50dp"
+                    android:id="@+id/buttonBorraCuenta"
+                    android:layout_width="match_parent"
+                    android:layout_height="60dp"
+                    android:backgroundTint="@android:color/holo_red_dark"
                     android:text="Borrar Cuenta"
-                    android:textColor="@color/Rojo"/>
+                    android:textSize="16sp"
+                    android:textColor="@color/white"/>
             </LinearLayout>
 
         </RelativeLayout>
