--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -108,6 +108,7 @@
                     </LinearLayout>
 
                     <LinearLayout
+                        android:id="@+id/reservas_perfil"
                         android:layout_width="62dp"
                         android:layout_height="wrap_content"
                         android:orientation="vertical"
