--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -13,6 +13,10 @@
             android:icon="@drawable/ic_account_circle"
             android:title="@string/menu_profile"/>
         <item
+        android:id="@+id/nav_mis_grupos"
+        android:icon="@drawable/grupo1"
+        android:title="Mis grupos" />
+        <item
             android:id="@+id/nav_ajustes"
             android:icon="@drawable/ic_settings"
             android:title="@string/menu_ajustes" />
