--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -24,6 +24,12 @@
         tools:layout="@layout/fragment_slideshow" />
 
     <fragment
+        android:id="@+id/nav_mis_grupos"
+        android:name="com.example.freestylemeeting.MisGruposFragment"
+        android:label="Mis grupos"
+        tools:layout="@layout/fragment_mis_grupos" />
+
+    <fragment
         android:id="@+id/nav_ajustes"
         android:name="com.example.freestylemeeting.SettingsFragment"
         android:label="Ajustes"
