--- a/app/src/main/res/layout/entrenamientos_list_item.xml
+++ b/app/src/main/res/layout/entrenamientos_list_item.xml
@@ -13,6 +13,7 @@
         android:textSize="26sp"
         android:textStyle="bold"/>
 
+
     <TextView
         android:layout_below="@id/nombreEntrenamientoList"
         android:id="@+id/fechaInicio"
@@ -20,7 +21,29 @@
         android:layout_height="wrap_content"
         android:text="Fecha Inicio:"
         android:textSize="14sp"/>
-
+    <TextView
+        android:layout_below="@id/nombreEntrenamientoList"
+        android:layout_toRightOf="@id/fechaInicio"
+        android:id="@+id/fechaInicioDescription"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Fecha Inicio:"
+        android:textSize="14sp"/>
+    <TextView
+        android:layout_below="@id/fechaInicio"
+        android:id="@+id/fechaFin"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Fecha fin:"
+        android:textSize="14sp"/>
+    <TextView
+        android:layout_below="@id/fechaInicio"
+        android:layout_toRightOf="@id/fechaFin"
+        android:id="@+id/fechaFinDescription"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Fecha Inicio:"
+        android:textSize="14sp"/>
 
 
 </RelativeLayout>
